Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -110,14 +110,14 @@
       "type": "series",
       "name": "365 Days to the Wedding",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx165790-OwIZI9ArGR4Q.jpg",
-      "description": "Genres: Romance\nTags:Marriage/Office Lady/Fake Relationship/Kuudere/Heterosexual/Work/Seinen/Male Protagonist/Primarily Adult Cast/Female Protagonist/Rural\nTakuya and Rika are coworkers in a travel agency in Tokyo. They’re both single, but they don’t mind, since they’re introverts with fulfilling lives at home. Unfortunately, now their job is looking to staff an office in Siberia, and non-married employees are the first to be considered. Rika is desperate to avoid the transfer and goes to Takuya with an idea: if they pretend they’re getting married in a year, they can stay in Tokyo. The only problem is the two of them barely know each other! If these two quiet coworkers “fake” a relationship, will it turn into something real?<br><br>\n\n(Source: Seven Seas Entertainment)"
+      "description": "Genres: Romance\nTags:Marriage/Office Lady/Fake Relationship/Heterosexual/Kuudere/Work/Seinen/Primarily Adult Cast/Male Protagonist/Female Protagonist/Rural\nTakuya and Rika are coworkers in a travel agency in Tokyo. They’re both single, but they don’t mind, since they’re introverts with fulfilling lives at home. Unfortunately, now their job is looking to staff an office in Siberia, and non-married employees are the first to be considered. Rika is desperate to avoid the transfer and goes to Takuya with an idea: if they pretend they’re getting married in a year, they can stay in Tokyo. The only problem is the two of them barely know each other! If these two quiet coworkers “fake” a relationship, will it turn into something real?<br><br>\n\n(Source: Seven Seas Entertainment)"
     },
     {
       "id": "tt32512773",
       "type": "series",
       "name": "Loner Life in Another World",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173693-tRLdDE1BieXe.png",
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Isekai/Male Protagonist/Hikikomori/Necromancy/Surreal Comedy\nWhen acerbic loner Haruka gets transported to another world with his class, he’s not big on adventuring, but he wouldn’t mind some cool magic of his own. Unfortunately, the magic powers are first-come-first-served, and by Haruka’s turn, there’s nothing good left to choose from. Now he’ll have to take on this fantasy world the hard way, with a hodgepodge selection of bizarre skills…and with all the girls in class tagging along!\n<br><br>\n(Source: Seven Seas Entertainment)<br><br>\n<i>Note: Each episode streamed a week early on some streaming services. The original TV broadcast started on October 4th, 2024.</i>"
+      "description": "Genres: Action, Adventure, Fantasy\nTags:Isekai/Male Protagonist/Hikikomori/Necromancy/Surreal Comedy/Magic/Survival\nHaruka has been living his high school life as a loner, but all of a sudden, he and his classmates are summoned into another world. A God gives him a list of skills he can freely pick... Or at least that was how it was supposed to be, as all the valuable skills have been taken by the other classmates first. After Haruka scolded God, he snapped back and gave all the remaining bad skills to Haruka. Thanks to the \"Loner\" skill, Haruka begins his lonely adventure in another world.\n<br><br>\n(Source: Muse Asia)<br><br>\n<i>Note: Each episode streamed a week early on some streaming services. The original TV broadcast started on October 4th, 2024.</i>"
     },
     {
       "id": "tt32766897",
@@ -164,7 +164,7 @@
     {
       "id": "tt29473209",
       "type": "series",
-      "name": "After-school Hanako-kun Part 2",
+      "name": "After-school Hanako-kun Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170893-zqmpX7iYUumi.jpg",
       "description": "Genres: Comedy, Slice of Life, Supernatural\nTags:Youkai/Ghost/School/Mythology/Episodic/Ensemble Cast\nContinuation of <i>Houkago Shounen Hanako-kun.</i> <br><br>\nThe spirit Hanako-kun and his human assistant, first-year student Nene Yashiro, keep the peace between supernatural forces and the students of Kamome Academy. When they’re not fighting to maintain balance between the living and spirit worlds, how do they spend their time? Join Hanako-kun and Nene on their adventures after school!<br><br>\n\n(Source: Crunchyroll)"
     },
@@ -190,18 +190,18 @@
       "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Heterosexual/Seinen/Iyashikei\nThe story follows Keisuke Niijima—who lost his beloved wife, Takae, ten years ago—and their daughter, Mai. They have been in a state of despair since Takae's death. One evening, an elementary school girl visits the Niijima family claiming to be the reincarnation of Takae. At first they don’t believe her but the girl continues to give them information that only the family knows. Keisuke and Mai soon recognize her as Takae and the three begin to act together as a \"family.” <br><br>\n\n(Source: Crunchyroll News)"
     },
     {
-      "id": "tt1352421",
-      "type": "series",
-      "name": "Natsume's Book of Friends Season 7",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166611-MXGsOlPv2IKj.png",
-      "description": "Genres: Drama, Fantasy, Slice of Life, Supernatural\nTags:Youkai/Iyashikei/Male Protagonist/Rural/Shoujo\nThe seventh season of <i>Natsume Yuujinchou.<br>"
-    },
-    {
       "id": "tt32501772",
       "type": "series",
       "name": "The Most Notorious \"Talker\" Runs the World's Greatest Clan",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177104-8fQUQdXGZG8j.jpg",
       "description": "Genres: Action, Adventure, Comedy, Fantasy, Psychological\nTags:Male Protagonist/Magic/Seinen/Swordplay\nNoel has grown up idolizing his grandfather, a legendary adventurer of the class known as Seekers. But when it comes time for Noel to set out on his own, much to his dismay, he turns out to be a Talker: a support class with meager abilities. But Noel’s got ambition in spades–and the smarts to match–so he’s determined to do whatever it takes to make the world know his name!<br>\n<br>\n(Source: Seven Seas Entertainment)"
+    },
+    {
+      "id": "tt1352421",
+      "type": "series",
+      "name": "Natsume's Book of Friends Season 7",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166611-MXGsOlPv2IKj.png",
+      "description": "Genres: Drama, Fantasy, Slice of Life, Supernatural\nTags:Youkai/Iyashikei/Male Protagonist/Rural/Shoujo\nThe seventh season of <i>Natsume Yuujinchou.<br>"
     },
     {
       "id": "tt22249034",
@@ -239,11 +239,11 @@
       "description": "Genres: Sci-Fi, Sports\nTags:Cars/Seinen/Heterosexual\nThe second season of <i>MF Ghost.</i>"
     },
     {
-      "id": "tt30523856",
+      "id": "tt32508529",
       "type": "series",
-      "name": "Ao no Miburo",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169258-kj8qoomfAKsB.jpg",
-      "description": "Genres: Drama\nTags:Male Protagonist/Historical/Samurai/Shounen\nIt's 1863, the twilight of the shogunate, and Japan is on the cusp of monumental change. The streets of the nation's capital are soaked in blood as political upheaval and rising tensions between masterless, wandering ronin and government samurai set the stage for one of the most turbulent times in Japan's history. Young orphan Nio is no stranger to the harsh realities of the world, and yet he can't help but cling to his burning passion for justice and desire to change the world for the better.<br><br>\n\nOne day, he crosses paths with two men who will become central figures of the coming revolution: Hijikata Toshizo and Okita Souji, two of the founding members of a group of hated ronin known as the Miburo—who would later become known as the Shinsengumi. Inspired by the efforts of the so-called \"Blues Wolves of Mibu,\" Nio decides to join the ranks to help carve a path to the world he wishes to see. But with new betrayals and reversals every day, will Nio be able to stay true to his conscience?<br><br>\n\n(Source: Kodansha USA, edited)"
+      "name": "Let This Grieving Soul Retire",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175019-8lLRmHID5fMd.jpg",
+      "description": "Genres: Action, Comedy, Fantasy\nTags:\nIt's the golden age for treasure hunters—adventurers hungry for wealth, fame, power, and glory, who risk their lives in treasure vaults throughout the world.\n<br><br>\n<i>“Let's become treasure hunters.”</i>\n<br><br>\nKrai and his childhood friends swore to become the greatest of them all, but that dream should have died the day Krai realized he wasn't cut out for the job! Yet expectations continue to mount, right along with Krai's fear for his life. While his childhood friends climb closer toward their dream, this grieving soul has one simple wish: to pack it all in and retire!\n<br><br>\n(Source: J-Novel Club)"
     },
     {
       "id": "tt32524882",
@@ -253,11 +253,11 @@
       "description": "Genres: Fantasy, Romance\nTags:Heterosexual/Dragons\nJill breaks out of prison the night before she’s set to be executed by her fiancé, Crown Prince Gerald. She’s struck by an arrow while escaping, but instead of dying, she’s transported six years into the past—to the night she and Gerald met. Desperate to alter fate, she instead proposes to the first man she sees, Hadis Teos Rave, her enemy in the future. This is her last chance to get it right!<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt32508529",
+      "id": "tt30523856",
       "type": "series",
-      "name": "Let This Grieving Soul Retire",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175019-8lLRmHID5fMd.jpg",
-      "description": "Genres: Action, Comedy, Fantasy\nTags:\nIt's the golden age for treasure hunters—adventurers hungry for wealth, fame, power, and glory, who risk their lives in treasure vaults throughout the world.\n<br><br>\n<i>“Let's become treasure hunters.”</i>\n<br><br>\nKrai and his childhood friends swore to become the greatest of them all, but that dream should have died the day Krai realized he wasn't cut out for the job! Yet expectations continue to mount, right along with Krai's fear for his life. While his childhood friends climb closer toward their dream, this grieving soul has one simple wish: to pack it all in and retire!\n<br><br>\n(Source: J-Novel Club)"
+      "name": "Ao no Miburo",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169258-kj8qoomfAKsB.jpg",
+      "description": "Genres: Drama\nTags:Male Protagonist/Historical/Samurai/Shounen\nIt's 1863, the twilight of the shogunate, and Japan is on the cusp of monumental change. The streets of the nation's capital are soaked in blood as political upheaval and rising tensions between masterless, wandering ronin and government samurai set the stage for one of the most turbulent times in Japan's history. Young orphan Nio is no stranger to the harsh realities of the world, and yet he can't help but cling to his burning passion for justice and desire to change the world for the better.<br><br>\n\nOne day, he crosses paths with two men who will become central figures of the coming revolution: Hijikata Toshizo and Okita Souji, two of the founding members of a group of hated ronin known as the Miburo—who would later become known as the Shinsengumi. Inspired by the efforts of the so-called \"Blues Wolves of Mibu,\" Nio decides to join the ranks to help carve a path to the world he wishes to see. But with new betrayals and reversals every day, will Nio be able to stay true to his conscience?<br><br>\n\n(Source: Kodansha USA, edited)"
     },
     {
       "id": "tt30476504",
@@ -295,18 +295,18 @@
       "description": "Genres: Comedy, Romance\nTags:Crossdressing/Tomboy/Primarily Adult Cast/Shoujo/College/Heterosexual/Bisexual\nCollege student Tokiwa gets invited to a mixer by his female classmate Suo. But when he arrives with his friends, they're greeted by three dazzlingly handsome men?! But as the two groups get to know each other, they find themselves getting closer in unexpected ways.<br><br>\n(Source: MANGA UP!)"
     },
     {
-      "id": "tt32863895",
-      "type": "series",
-      "name": "The Stories of Girls Who Couldn't Be Magicians",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx107372-jRO0pY1kIRLl.jpg",
-      "description": "Genres: Fantasy\nTags:School/Magic/Ojou-sama/Female Protagonist\n\nKurumi Mirai is in the first year of high school. <br><br>\n\nShe has enrolled in junior high section of the Redrun Magic School, the world's only facility for mages that approved by International Mage League and able to work under royal families when graduates, and she was always top of the class. However, when she applies for the high school section and took the examination to get into a mage training class \"Ma-gumi (Mage Class)\", she wasn't able to get in in spite having full scores and was top of the class for the whole three years. <br><br>\n\nThere are some students in the class next to her that takes that class. Among that there's someone she admires. How will Kurumi Mirai who has extraordinary brain but didn't get in to be a mage candidate try to overcome and grow up? What is the aim for Minami Suzuki, a loyal mage who suddenly appears to be the homeroom teacher? This is a relaxing story of her growth.\n<br><br>\n(Source: MAL News)"
-    },
-    {
       "id": "tt33054366",
       "type": "series",
       "name": "Negative Positive Angler",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179919-KLuGsnqnhkPb.jpg",
       "description": "Genres: Drama\nTags:Fishing/Primarily Adult Cast\nThe anime's story centers on Tsunehiro Sasaki, a university student with a large debt and is told by his doctor that he only has two years left to live. Living the rest of his days in depression, Tsunehiro one day gets chased by a debt collector and falls into the sea. He is rescued by Hana, a girl who loves fishing, and her fishing friends including Takaaki.\n<br>\nHana urges Tsunehiro to experience fishing for the first time in his life and he starts to develop friendship with other fishing enthusiasts. Things start looking up for Tsunehiro as he starts working at the convenience store where Hana and Takaaki work, and he slowly gets hooked into fishing.\n<br><br>\n(Source: Anime News Network)"
+    },
+    {
+      "id": "tt32863895",
+      "type": "series",
+      "name": "The Stories of Girls Who Couldn't Be Magicians",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx107372-jRO0pY1kIRLl.jpg",
+      "description": "Genres: Fantasy\nTags:School/Magic/Ojou-sama/Female Protagonist\n\nKurumi Mirai is in the first year of high school. <br><br>\n\nShe has enrolled in junior high section of the Redrun Magic School, the world's only facility for mages that approved by International Mage League and able to work under royal families when graduates, and she was always top of the class. However, when she applies for the high school section and took the examination to get into a mage training class \"Ma-gumi (Mage Class)\", she wasn't able to get in in spite having full scores and was top of the class for the whole three years. <br><br>\n\nThere are some students in the class next to her that takes that class. Among that there's someone she admires. How will Kurumi Mirai who has extraordinary brain but didn't get in to be a mage candidate try to overcome and grow up? What is the aim for Minami Suzuki, a loyal mage who suddenly appears to be the homeroom teacher? This is a relaxing story of her growth.\n<br><br>\n(Source: MAL News)"
     },
     {
       "id": "tt32832433",
