--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -81,16 +81,6 @@
       "description": "Genres: Comedy\nTags:CGI/Artificial Intelligence/Cars/Animals\nThe story begins with the emergence of the first high-tech molcar in Molcity, with drivers beginning to ride state-of-the-art AI-driven Molcars. Potato and friends get involved in a chase between a mysterious organization and a Molcar AI named Cannon, and are saved by a talented driver. Potato finds out that the driver is in search of his missing Molcar, and gets the idea to use Cannon's AI functionality to help with the search.\n<br><br>\n(Source: Anime News Network, edited)<br><br>\n<i>Note: Relations are provisional and will be updated when more info is announced.</i>"
     },
     {
-      "id": "tt30008198",
-      "type": "movie",
-      "name": "Gintama on Theater 2D: Kintama-hen",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178436-2xnxkYycFNCM.jpg",
-      "behaviorHints": {
-        "defaultVideoId": "tt30008198"
-      },
-      "description": "Genres: Action, Comedy, Sci-Fi\nTags:\nTheatrical cut of the Kintama Arc (episodes 253-256). The movie is a part of the \"Gintama 20th Anniversary Project\"."
-    },
-    {
       "id": "tt33318548",
       "type": "movie",
       "name": "Inazuma Eleven: Aratanaru Eiyuutachi no Joshou",
@@ -101,6 +91,16 @@
       "description": "Genres: Action, Sports\nTags:Football\nAdaptation of the prologue of \"Inazuma Eleven: Victory Road\" video game."
     },
     {
+      "id": "tt30008198",
+      "type": "movie",
+      "name": "Gintama on Theater 2D: Kintama-hen",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178436-2xnxkYycFNCM.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt30008198"
+      },
+      "description": "Genres: Action, Comedy, Sci-Fi\nTags:\nTheatrical cut of the Kintama Arc (episodes 253-256). The movie is a part of the \"Gintama 20th Anniversary Project\"."
+    },
+    {
       "id": "tt5672290",
       "type": "movie",
       "name": "Nintama Rantarou: Dokutake Ninja-tai Saikyоu no Gunshi",
@@ -109,6 +109,16 @@
         "defaultVideoId": "tt5672290"
       },
       "description": "Genres: Comedy\nTags:Ninja\nnull"
+    },
+    {
+      "id": "tt7132924",
+      "type": "movie",
+      "name": "BanG Dream! It's MyGO!!!!!: Utau, Bokura ni Nareru Uta & FILM LIVE",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182241-0CqKdLrXSh1E.png",
+      "behaviorHints": {
+        "defaultVideoId": "tt7132924"
+      },
+      "description": "Genres: Drama, Music\nTags:\nCompilation film of <i>BanG Dream! It's MyGO!!!!!</i>. The second of the Bandori MyGO compilation movie duology."
     }
   ]
 }
