--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -26,7 +26,7 @@
       "type": "series",
       "name": "Uzumaki",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b111314-vZDqyfXNfsPY.png",
-      "description": "Genres: Drama, Horror, Mystery, Supernatural\nTags:Achromatic/Cosmic Horror/Rotoscoping/Gore/Body Horror/Primarily Teen Cast/Female Protagonist/Seinen/Episodic/Survival/Philosophy/Urban Fantasy/CGI/Detective\nFour episode anime adaptation of the Junji Ito manga. \n<br><br>\nKurozu-cho, a small fogbound town on the coast of Japan, is cursed. According to Shuichi Saito, the withdrawn boyfriend of teenager Kirie Goshima, their town is haunted not by a person or being but by a pattern: uzumaki, the spiral, the hypnotic secret shape of the world. It manifests itself in small ways: seashells, ferns, whirlpools in water, whirlwinds in air. And in large ways: the spiral marks on people's bodies, the insane obsessions of Shuichi's father, the voice from the cochlea in your inner ear. As the madness spreads, the inhabitants of Kurouzu-cho are pulled ever deeper, as if into a whirlpool from which there is no return...\n<br><br>\n(Source: Viz Media)"
+      "description": "Genres: Drama, Horror, Mystery, Supernatural\nTags:Achromatic/Cosmic Horror/Rotoscoping/Gore/Body Horror/Primarily Teen Cast/Female Protagonist/Seinen/Episodic/Survival/Philosophy/Urban Fantasy/CGI/Coastal/Detective\nFour episode anime adaptation of the Junji Ito manga. \n<br><br>\nKurozu-cho, a small fogbound town on the coast of Japan, is cursed. According to Shuichi Saito, the withdrawn boyfriend of teenager Kirie Goshima, their town is haunted not by a person or being but by a pattern: uzumaki, the spiral, the hypnotic secret shape of the world. It manifests itself in small ways: seashells, ferns, whirlpools in water, whirlwinds in air. And in large ways: the spiral marks on people's bodies, the insane obsessions of Shuichi's father, the voice from the cochlea in your inner ear. As the madness spreads, the inhabitants of Kurouzu-cho are pulled ever deeper, as if into a whirlpool from which there is no return...\n<br><br>\n(Source: Viz Media)"
     },
     {
       "id": "tt0434665",
@@ -75,7 +75,7 @@
       "type": "series",
       "name": "You are Ms. Servant",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172190-i1IqizIUcKkN.jpg",
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Maids/Heterosexual/Assassins/Shounen/Female Protagonist/Male Protagonist/Found Family/Iyashikei/Denpa/School/Kuudere/Slapstick\nThis is the story of a maid who is all alone in the world, but who finally finds a family.<br>\n<br>\nTold from young that her only worth is as a killer, Yuki had known nothing else except cold efficiency and following orders. Now that she has a chance to leave her past behind, she arrives at the doorstep of Hitoyoshi Yokoya, asking to be employed… as a maid?! Thus begins the journey of a former assassin learning what it means to be ‘normal’!<br>\n<br>\n(Source: Shogakukan)"
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Maids/Heterosexual/Assassins/Shounen/Found Family/Female Protagonist/Male Protagonist/Iyashikei/Denpa/School/Kuudere/Slapstick\nThis is the story of a maid who is all alone in the world, but who finally finds a family.<br>\n<br>\nTold from young that her only worth is as a killer, Yuki had known nothing else except cold efficiency and following orders. Now that she has a chance to leave her past behind, she arrives at the doorstep of Hitoyoshi Yokoya, asking to be employed… as a maid?! Thus begins the journey of a former assassin learning what it means to be ‘normal’!<br>\n<br>\n(Source: Shogakukan)"
     },
     {
       "id": "tt7978710",
@@ -89,14 +89,14 @@
       "type": "series",
       "name": "Dragon Ball DAIMA",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170083-gDNBp0B4VHsG.jpg",
-      "description": "Genres: Action, Adventure\nTags:Shounen/Martial Arts/Age Regression/Male Protagonist/Demons/Super Power/Gods\nGoku and company were living peaceful lives when they suddenly turned small due to a conspiracy! When they discover that the reason for this may lie in a world known as the \"Demon Realm\", a mysterious young Majin named Glorio appears before them.\n<br><br>\n(Source: Crunchyroll)\n<br><br>\n<i>Note: Relations are provisional and will be updated when more info is announced."
+      "description": "Genres: Action, Adventure\nTags:Demons/Shounen/Martial Arts/Age Regression/Male Protagonist/Super Power/Gods\nGoku and company were living peaceful lives when they suddenly turned small due to a conspiracy! When they discover that the reason for this may lie in a world known as the \"Demon Realm\", a mysterious young Majin named Glorio appears before them.\n<br><br>\n(Source: Crunchyroll)\n<br><br>\n<i>Note: Relations are provisional and will be updated when more info is announced."
     },
     {
       "id": "tt32512773",
       "type": "series",
       "name": "Loner Life in Another World",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173693-tRLdDE1BieXe.png",
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Isekai/Meta/Hikikomori/Surreal Comedy/Magic/Survival/Male Protagonist/Necromancy/Slapstick\nHaruka has been living his high school life as a loner, but all of a sudden, he and his classmates are summoned into another world. A God gives him a list of skills he can freely pick... Or at least that was how it was supposed to be, as all the valuable skills have been taken by the other classmates first. After Haruka scolded God, he snapped back and gave all the remaining bad skills to Haruka. Thanks to the \"Loner\" skill, Haruka begins his lonely adventure in another world.\n<br><br>\n(Source: Muse Asia)<br><br>\n<i>Note: Each episode streamed a week early on some streaming services. The original TV broadcast started on October 4th, 2024.</i>"
+      "description": "Genres: Action, Adventure, Fantasy\nTags:Meta/Isekai/Surreal Comedy/Hikikomori/Magic/Survival/Male Protagonist/Necromancy/Slapstick\nHaruka has been living his high school life as a loner, but all of a sudden, he and his classmates are summoned into another world. A God gives him a list of skills he can freely pick... Or at least that was how it was supposed to be, as all the valuable skills have been taken by the other classmates first. After Haruka scolded God, he snapped back and gave all the remaining bad skills to Haruka. Thanks to the \"Loner\" skill, Haruka begins his lonely adventure in another world.\n<br><br>\n(Source: Muse Asia)<br><br>\n<i>Note: Each episode streamed a week early on some streaming services. The original TV broadcast started on October 4th, 2024.</i>"
     },
     {
       "id": "tt32508529",
@@ -190,13 +190,6 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:Dragons/Male Protagonist/Rural/Monster Girl/Magic/Swordplay/Agriculture\nLong ago, the most ancient of divine dragons was slain by a human. The mighty dragon accepted its death when suddenly, it was reborn as Dolan, a man who lives in a quiet village. While spending another peaceful day toiling in the fields, he meets Celina, a half-human, half-snake creature looking for a partner. The unlikely duo become friends, but challenges lie ahead that threaten their new bond.\n<br><br>\n(Source: Cunchyroll)"
     },
     {
-      "id": "tt32832434",
-      "type": "series",
-      "name": "TsumaSho",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162785-kqAuHBdvX283.jpg",
-      "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Family Life/Seinen/Heterosexual/Iyashikei\nKeisuke Niijima has lived in grief since his wife, Takae, passed away 10 years ago. But when a young girl visits, claiming to be Takae reincarnated, Keisuke and his daughter, Mai, are drawn into a miraculous reunion. As the girl reveals intimate details only they could know, the Niijima family slowly begins to heal, rediscovering love and warmth in the most unexpected way. <br><br>\n\n(Source: Crunchyroll)"
-    },
-    {
       "id": "tt33054366",
       "type": "series",
       "name": "Negative Positive Angler",
@@ -204,11 +197,25 @@
       "description": "Genres: Drama\nTags:Fishing/Iyashikei/Hikikomori/Primarily Adult Cast/Male Protagonist/Suicide\nThe anime's story centers on Tsunehiro Sasaki, a university student with a large debt and is told by his doctor that he only has two years left to live. Living the rest of his days in depression, Tsunehiro one day gets chased by a debt collector and falls into the sea. He is rescued by Hana, a girl who loves fishing, and her fishing friends including Takaaki.\n<br>\nHana urges Tsunehiro to experience fishing for the first time in his life and he starts to develop friendship with other fishing enthusiasts. Things start looking up for Tsunehiro as he starts working at the convenience store where Hana and Takaaki work, and he slowly gets hooked into fishing.\n<br><br>\n(Source: Anime News Network)"
     },
     {
+      "id": "tt32832434",
+      "type": "series",
+      "name": "TsumaSho",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162785-kqAuHBdvX283.jpg",
+      "description": "Genres: Comedy, Drama, Romance, Slice of Life\nTags:Family Life/Seinen/Heterosexual/Iyashikei\nKeisuke Niijima has lived in grief since his wife, Takae, passed away 10 years ago. But when a young girl visits, claiming to be Takae reincarnated, Keisuke and his daughter, Mai, are drawn into a miraculous reunion. As the girl reveals intimate details only they could know, the Niijima family slowly begins to heal, rediscovering love and warmth in the most unexpected way. <br><br>\n\n(Source: Crunchyroll)"
+    },
+    {
       "id": "tt29370857",
       "type": "series",
       "name": "Ron Kamonohashi’s Forbidden Deductions Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172355-D7J0LRyWZZhg.jpg",
       "description": "Genres: Drama, Mystery\nTags:Detective/Work/Male Protagonist\nThe second season of <i>Kamonohashi Ron no Kindan Suiri</i>."
+    },
+    {
+      "id": "tt32524882",
+      "type": "series",
+      "name": "The Do-Over Damsel Conquers the Dragon Emperor",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx164299-sXyEH1zfho8Q.jpg",
+      "description": "Genres: Fantasy, Romance\nTags:Heterosexual/Shoujo/Dragons/Magic/Swordplay\nJill breaks out of prison the night before she’s set to be executed by her fiancé, Crown Prince Gerald. She’s struck by an arrow while escaping, but instead of dying, she’s transported six years into the past—to the night she and Gerald met. Desperate to alter fate, she instead proposes to the first man she sees, Hadis Teos Rave, her enemy in the future. This is her last chance to get it right!<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt10443362",
@@ -222,14 +229,7 @@
       "type": "series",
       "name": "Mecha Ude: Mechanical Arms",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx154673-SCp0Qo62N1Q6.jpg",
-      "description": "Genres: Action, Mecha, Sci-Fi\nTags:Male Protagonist/Artificial Intelligence/School/Terrorism/Super Power/Cyborg/Aliens/Shounen/Motorcycles\n New anime project for <i>MECHA-UDE</i>, as a full-fledged anime series. <br><br>\nLong ago, alien lifeforms came to Earth, fusing with people on the planet. Due to their appearance, they were dubbed \"Mecha-ude,\" as when fused, they bore a striking resemblance to mechanized limbs.<br><br>\n\nThrough an involuntary partnership, average middle schooler Hikaru Amatsuga works alongside the Mecha-ude Arma, who is an extremely rare and special existence. To protect Arma, the resistance group ARMS assigns the dual Mecha-ude user Aki Murasame to follow him wherever he goes. However, she is also looking for a mysterious Snake-Type Mecha-ude wielder, who has put many of her comrades in a critical state.<br><br>\n\nBehind the scenes, an organization known as the Kagami Group is searching for the mythical \"Trigger Arm,\" a Mecha-ude said to grant unlimited power. When Aki's life is threatened by this group, Hikaru must team up with Arma to find the courage to fight back and, along the way, learn that his life will never be ordinary again. <br><br>\n(Source: MAL Rewrite)"
-    },
-    {
-      "id": "tt32524882",
-      "type": "series",
-      "name": "The Do-Over Damsel Conquers the Dragon Emperor",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx164299-sXyEH1zfho8Q.jpg",
-      "description": "Genres: Fantasy, Romance\nTags:Heterosexual/Shoujo/Dragons/Magic/Swordplay\nJill breaks out of prison the night before she’s set to be executed by her fiancé, Crown Prince Gerald. She’s struck by an arrow while escaping, but instead of dying, she’s transported six years into the past—to the night she and Gerald met. Desperate to alter fate, she instead proposes to the first man she sees, Hadis Teos Rave, her enemy in the future. This is her last chance to get it right!<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Action, Mecha, Sci-Fi\nTags:Artificial Intelligence/Male Protagonist/School/Cyborg/Terrorism/Super Power/Aliens/Shounen/Motorcycles\n New anime project for <i>MECHA-UDE</i>, as a full-fledged anime series. <br><br>\nLong ago, alien lifeforms came to Earth, fusing with people on the planet. Due to their appearance, they were dubbed \"Mecha-ude,\" as when fused, they bore a striking resemblance to mechanized limbs.<br><br>\n\nThrough an involuntary partnership, average middle schooler Hikaru Amatsuga works alongside the Mecha-ude Arma, who is an extremely rare and special existence. To protect Arma, the resistance group ARMS assigns the dual Mecha-ude user Aki Murasame to follow him wherever he goes. However, she is also looking for a mysterious Snake-Type Mecha-ude wielder, who has put many of her comrades in a critical state.<br><br>\n\nBehind the scenes, an organization known as the Kagami Group is searching for the mythical \"Trigger Arm,\" a Mecha-ude said to grant unlimited power. When Aki's life is threatened by this group, Hikaru must team up with Arma to find the courage to fight back and, along the way, learn that his life will never be ordinary again. <br><br>\n(Source: MAL Rewrite)"
     },
     {
       "id": "tt22249034",
@@ -299,7 +299,7 @@
       "type": "series",
       "name": "Acro Trip",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx157965-YhogaZGde6tv.jpg",
-      "description": "Genres: Comedy, Fantasy, Mahou Shoujo\nTags:Female Protagonist/Henshin/Magic/Shoujo/Slapstick/Otaku Culture/Urban/Animals/Villainess/Urban Fantasy\nChizuko is a normal otaku girl in Niigata Prefecture. She’s obsessed with Berry Blossom, a magical heroine who protects the city. But the battles with her inept nemesis, Chroma, have become so lackluster that they’re not even worth watching. Chizuko wants to see Berry’s full power, a desire that quickly leads this seemingly timid girl down a path of evil.<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Fantasy, Mahou Shoujo\nTags:Female Protagonist/Slapstick/Shoujo/Magic/Henshin/Otaku Culture/Urban/Animals/Villainess/Urban Fantasy\nChizuko is a normal otaku girl in Niigata Prefecture. She’s obsessed with Berry Blossom, a magical heroine who protects the city. But the battles with her inept nemesis, Chroma, have become so lackluster that they’re not even worth watching. Chizuko wants to see Berry’s full power, a desire that quickly leads this seemingly timid girl down a path of evil.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32832431",
@@ -307,13 +307,6 @@
       "name": "A Terrified Teacher at Ghoul School!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171545-j9foxkHeXec7.jpg",
       "description": "Genres: Comedy, Supernatural\nTags:Monster Boy/Primarily Male Cast/Slapstick/Episodic/Teacher/Youkai/School/Male Protagonist/Urban Fantasy/Shounen/Primarily Teen Cast/Cute Boys Doing Cute Things/Nekomimi/Gods\nRookie teacher Haruaki Abe is as cowardly as they come. It's hard enough for him to handle human students without whimpering-and now he's going to be teaching at a school full of monsters?! It's a classroom of horrors for Haruaki, as his mischievous students use every means at their disposal to prank him! Will this poor teacher be able to get his group of ghouls under control, or is this class destined for failure?<br>\n<br>\n(Source: Yen Press)"
-    },
-    {
-      "id": "tt13840232",
-      "type": "series",
-      "name": "Love Live! Superstar!! Season 3",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx155502-8Dyh2np8o5GC.jpg",
-      "description": "Genres: Music, Slice of Life\nTags:Idol/Dancing/Cute Girls Doing Cute Things/School Club/Primarily Teen Cast/Female Protagonist/Primarily Female Cast\nThe third season of <i>Love Live! Superstar!!</i>"
     },
     {
       "id": "tt20228550",
@@ -328,6 +321,13 @@
       "name": "TRILLION GAME",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169315-NtbOlSyDtSCZ.png",
       "description": "Genres: Action, Comedy, Drama, Psychological\nTags:Economics/Primarily Adult Cast/Seinen/Male Protagonist/Urban\nOld schoolmates Haru and Gaku will do anything to achieve success. And success to them means earning a trillion dollars! But to do so, they’ll need to take full advantage of their own unique skills. Haru is a persuasive and confident speaker who can connect with anyone, while Gaku, although awkward, is an expert programmer. Will their combined talents be enough to make their dream a reality?<br>\n<br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt13840232",
+      "type": "series",
+      "name": "Love Live! Superstar!! Season 3",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx155502-8Dyh2np8o5GC.jpg",
+      "description": "Genres: Music, Slice of Life\nTags:Idol/Dancing/Cute Girls Doing Cute Things/School Club/Primarily Teen Cast/Female Protagonist/Primarily Female Cast\nThe third season of <i>Love Live! Superstar!!</i>"
     },
     {
       "id": "tt32832433",
