Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -29,18 +29,18 @@
       "description": "Genres: Drama, Horror, Mystery, Supernatural\nTags:Achromatic/Cosmic Horror/Body Horror/Gore/Rotoscoping/Female Protagonist/CGI/Seinen/Survival/Primarily Teen Cast/Urban Fantasy/Coastal/Episodic/Surreal Comedy/Philosophy/Heterosexual/Detective\nFour episode anime adaptation of the Junji Ito manga. \n<br><br>\nKurozu-cho, a small fogbound town on the coast of Japan, is cursed. According to Shuichi Saito, the withdrawn boyfriend of teenager Kirie Goshima, their town is haunted not by a person or being but by a pattern: uzumaki, the spiral, the hypnotic secret shape of the world. It manifests itself in small ways: seashells, ferns, whirlpools in water, whirlwinds in air. And in large ways: the spiral marks on people's bodies, the insane obsessions of Shuichi's father, the voice from the cochlea in your inner ear. As the madness spreads, the inhabitants of Kurouzu-cho are pulled ever deeper, as if into a whirlpool from which there is no return...\n<br><br>\n(Source: Viz Media)"
     },
     {
-      "id": "tt0434665",
-      "type": "series",
-      "name": "BLEACH: Thousand-Year Blood War - The Conflict",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169755-Rqb7MjnzdTc6.jpg",
-      "description": "Genres: Action, Adventure, Supernatural\nTags:War/Swordplay/Super Power/Urban Fantasy/Male Protagonist/Shounen/Gods/Achromatic/Ghost/Archery\nThe third part of <i>BLEACH: Sennen Kessen-hen</i>. "
-    },
-    {
       "id": "tt32639706",
       "type": "series",
       "name": "Blue Box",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170942-B77wUSM1jQTu.jpg",
       "description": "Genres: Romance, Slice of Life, Sports\nTags:School Club/Athletics/Heterosexual/Coming of Age/Badminton/Male Protagonist/Basketball/School/Primarily Teen Cast/Female Protagonist/Shounen/CGI\n<i>Do these sports-crossed lovers have a chance?</i>\n<br><br>\nTaiki Inomata loves badminton, but he has a long way to go before he can reach nationals. When Taiki sees upperclassman Chinatsu Kano practicing her heart out on the girls’ basketball team, he falls for her hard. After an unexpected turn of events brings the two closer together, sports might not be the first thing on their minds anymore!<br><br>(Source: TMS Anime)<br><br>\n<i>Note: The series is streaming a week in advance on Netflix Japan starting with episode 2 released alongside episode 1.</i>"
+    },
+    {
+      "id": "tt0434665",
+      "type": "series",
+      "name": "BLEACH: Thousand-Year Blood War - The Conflict",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169755-Rqb7MjnzdTc6.jpg",
+      "description": "Genres: Action, Adventure, Supernatural\nTags:War/Swordplay/Super Power/Urban Fantasy/Male Protagonist/Shounen/Gods/Achromatic/Ghost/Archery\nThe third part of <i>BLEACH: Sennen Kessen-hen</i>. "
     },
     {
       "id": "tt13544802",
@@ -103,7 +103,7 @@
       "type": "series",
       "name": "Ranma1/2 (2024)",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178533-md2BV8esGezM.jpg",
-      "description": "Genres: Action, Comedy, Romance\nTags:Gender Bending/Arranged Marriage/Martial Arts/Shapeshifting/Tomboy/Female Harem/Episodic/Love Triangle/Slapstick/School/Tsundere/Ensemble Cast/Heterosexual/Male Protagonist/Animals/Crossdressing/Male Harem/Nudity/Yuri/LGBTQ+ Themes\nA new anime adaptation of Rumiko Takahashi's <i>Ranma 1/2</i>.\n<br><br>\nRanma Saotome and Akane Tendou of Tendou Dojo are betrothed to each other by their parents. But Ranma faces a unique problem…<br><br>\n\nEver since he fell into the cursed springs of Jusenkyo while training in China, his body has acquired the peculiar trait of transforming into a girl when doused with cold water and reverting to a boy with hot water.<br><br>\n\nGet ready for the slapstick, action-packed rom com featuring Ranma, Akane, and a vibrant cast of unique characters!<br><br>\n(Source: Ranma 1/2 PR Official Site, edited)"
+      "description": "Genres: Action, Comedy, Romance\nTags:Gender Bending/Arranged Marriage/Martial Arts/Shapeshifting/Tomboy/Female Harem/Episodic/Love Triangle/Slapstick/School/Tsundere/Ensemble Cast/Male Protagonist/Heterosexual/Animals/Crossdressing/Male Harem/Nudity/Yuri/LGBTQ+ Themes\nA new anime adaptation of Rumiko Takahashi's <i>Ranma 1/2</i>.\n<br><br>\nRanma Saotome and Akane Tendou of Tendou Dojo are betrothed to each other by their parents. But Ranma faces a unique problem…<br><br>\n\nEver since he fell into the cursed springs of Jusenkyo while training in China, his body has acquired the peculiar trait of transforming into a girl when doused with cold water and reverting to a boy with hot water.<br><br>\n\nGet ready for the slapstick, action-packed rom com featuring Ranma, Akane, and a vibrant cast of unique characters!<br><br>\n(Source: Ranma 1/2 PR Official Site, edited)"
     },
     {
       "id": "tt32508529",
@@ -334,7 +334,7 @@
       "type": "series",
       "name": "Love Live! Superstar!! Season 3",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx155502-8Dyh2np8o5GC.jpg",
-      "description": "Genres: Music, Slice of Life\nTags:Idol/Dancing/Cute Girls Doing Cute Things/School Club/Primarily Teen Cast/Female Protagonist/Primarily Female Cast\nThe third season of <i>Love Live! Superstar!!</i>"
+      "description": "Genres: Music, Slice of Life\nTags:Idol/Dancing/Cute Girls Doing Cute Things/School Club/Primarily Teen Cast/Ensemble Cast/Female Protagonist/Primarily Female Cast\nThe third season of <i>Love Live! Superstar!!</i>"
     },
     {
       "id": "tt32832433",
