--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -1,3 +1,124 @@
 {
-  "metas": []
+  "metas": [
+    {
+      "id": "tt30317151",
+      "type": "movie",
+      "name": "Fureru.",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171109-L8VMss7mdCKU.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt30317151"
+      },
+      "description": "Genres: Drama, Supernatural\nTags:Coming of Age/Work/Primarily Adult Cast/Bar\n<i>Fureru</i> is a coming-of-age film set in present-day Tokyo, centering on childhood friends who find a creature with mysterious powers that pushes them to discover the bonds that tie the three students together. <br><br>\n(Source: Crunchyroll News, edited)"
+    },
+    {
+      "id": "kitsu:48666",
+      "type": "movie",
+      "name": "30-sai made Doutei da to Mahou Tsukai ni Nareru Rashii: Tokubetsu-hen",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176470-QfMtYL4BEmDn.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "kitsu:48666"
+      },
+      "description": "Genres: Comedy, Romance, Slice of Life, Supernatural\nTags:Boys' Love\nMovie compiling <i>30-sai made Doutei da to Mahou Tsukai ni Nareru Rashii</i> which also has new footage content not in the TV anime."
+    },
+    {
+      "id": "tt33311726",
+      "type": "movie",
+      "name": "Ganbatte Ikimasshoi",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176245-OoBRZRVUwO7t.png",
+      "behaviorHints": {
+        "defaultVideoId": "tt33311726"
+      },
+      "description": "Genres: Drama, Sports\nTags:Full CGI/School Club/Female Protagonist/Primarily Teen Cast/Primarily Female Cast\nA high-school girl, Etsuko, just spends her days without any aims or purpose, until one day, Riina, a transfer student, asks her help to set up a boat club. Although Etsuko reluctantly accepts after hearing Riina speak passionately about her dream, she gradually starts to embrace the club after spending time with her teammates. <br><br>\n(Source: Annecy Festival)"
+    },
+    {
+      "id": "tt32809227",
+      "type": "movie",
+      "name": "Fuuto Tantei: Kamen Rider Skull no Shouzou",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178774-Uyut226cubzL.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt32809227"
+      },
+      "description": "Genres: Action, Drama, Mystery, Supernatural\nTags:Tokusatsu/Henshin/Detective\nWhat happened to Shotarou, Phillip, and Sokichi Narumi on the night \"Kamen Rider W\" was born?.....<br><br>\nAn adaptation of Fuuto P.I. volume #6, which is a extended version of the \"Begins' Night\" chapter from the original Live-Action series."
+    },
+    {
+      "id": "tt7132924",
+      "type": "movie",
+      "name": "BanG Dream! It's MyGO!!!!!: Haru no Hidamari, Mayoi Neko",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173174-PhUFHaaVnvgv.png",
+      "behaviorHints": {
+        "defaultVideoId": "tt7132924"
+      },
+      "description": "Genres: Drama, Music\nTags:Band/Primarily Female Cast\nCompilation film of <i>BanG Dream! It's MyGO!!!!!</i>. The first of the Bandori MyGO compilation movie duology."
+    },
+    {
+      "id": "tt33318428",
+      "type": "movie",
+      "name": "Inazuma Eleven: Soushuuhen - Densetsu no Kickoff",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180804-XedQP8o3pUCO.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt33318428"
+      },
+      "description": "Genres: Action, Sports\nTags:\nCompilation film of <i>Inazuma Eleven;</i> a recap of the original video game and the first 26 episodes of the series which focuses on the matches."
+    },
+    {
+      "id": "tt32165241",
+      "type": "movie",
+      "name": "Genjitsu no Yohane: SUNSHINE in the MIRROR Movie",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178782-mku5CEwIWOhO.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt32165241"
+      },
+      "description": "Genres: Fantasy, Music, Slice of Life\nTags:\nTheatrical compilation of <i>Genjitsu no Yohane: Sunshine in the Mirror</i> announced during the <i>Love Live! Sunshine! Aqours 9th Anniversary Project Presentation</i>."
+    },
+    {
+      "id": "tt33318548",
+      "type": "movie",
+      "name": "Inazuma Eleven: Aratanaru Eiyuutachi no Joshou",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180806-K1PAxlhjN2TN.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt33318548"
+      },
+      "description": "Genres: Action, Sports\nTags:Football\nAdaptation of the prologue of \"Inazuma Eleven: Victory Road\" video game."
+    },
+    {
+      "id": "tt32579772",
+      "type": "movie",
+      "name": "PUI PUI Molcar the Movie MOLMAX",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx173884-2jNt8jq28FTV.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt32579772"
+      },
+      "description": "Genres: Comedy\nTags:CGI/Artificial Intelligence/Cars/Animals\nThe story begins with the emergence of the first high-tech molcar in Molcity, with drivers beginning to ride state-of-the-art AI-driven Molcars. Potato and friends get involved in a chase between a mysterious organization and a Molcar AI named Cannon, and are saved by a talented driver. Potato finds out that the driver is in search of his missing Molcar, and gets the idea to use Cannon's AI functionality to help with the search.\n<br><br>\n(Source: Anime News Network, edited)<br><br>\n<i>Note: Relations are provisional and will be updated when more info is announced.</i>"
+    },
+    {
+      "id": "tt30008198",
+      "type": "movie",
+      "name": "Gintama on Theater 2D: Kintama-hen",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178436-2xnxkYycFNCM.jpg",
+      "behaviorHints": {
+        "defaultVideoId": "tt30008198"
+      },
+      "description": "Genres: Action, Comedy, Sci-Fi\nTags:\nTheatrical cut of the Kintama Arc (episodes 253-256). The movie is a part of the \"Gintama 20th Anniversary Project\"."
+    },
+    {
+      "id": "tt7132924",
+      "type": "movie",
+      "name": "BanG Dream! It's MyGO!!!!!: Utau, Bokura ni Nareru Uta & FILM LIVE",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182241-0CqKdLrXSh1E.png",
+      "behaviorHints": {
+        "defaultVideoId": "tt7132924"
+      },
+      "description": "Genres: Drama, Music\nTags:\nCompilation film of <i>BanG Dream! It's MyGO!!!!!</i>. The second of the Bandori MyGO compilation movie duology."
+    },
+    {
+      "id": "tt33615466",
+      "type": "movie",
+      "name": "Nintama Rantarou: Dokutake Ninja-tai Saikyоu no Gunshi",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175138-SLaKyfkWnY0y.png",
+      "behaviorHints": {
+        "defaultVideoId": "tt33615466"
+      },
+      "description": "Genres: Comedy\nTags:Ninja\nnull"
+    }
+  ]
 }
