Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -40,7 +40,7 @@
       "type": "series",
       "name": "BLEACH: Thousand-Year Blood War - The Conflict",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169755-Rqb7MjnzdTc6.jpg",
-      "description": "Genres: Action, Adventure, Supernatural\nTags:War/Swordplay/Super Power/Urban Fantasy/Male Protagonist/Shounen/Gods/Achromatic/Ghost/Archery\nThe third part of <i>BLEACH: Sennen Kessen-hen</i>. "
+      "description": "Genres: Action, Adventure, Supernatural\nTags:War/Swordplay/Super Power/Urban Fantasy/Shounen/Male Protagonist/Gods/Achromatic/Ghost/Archery\nThe third part of <i>BLEACH: Sennen Kessen-hen</i>. "
     },
     {
       "id": "tt28776190",
@@ -330,18 +330,18 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Shounen/Otaku Culture\nThe second season of <i>Nanatsu no Taizai: Mokushiroku no Yonkishi.</i>"
     },
     {
-      "id": "tt13840232",
-      "type": "series",
-      "name": "Love Live! Superstar!! Season 3",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx155502-8Dyh2np8o5GC.jpg",
-      "description": "Genres: Music, Slice of Life\nTags:Idol/School Club/Dancing/Cute Girls Doing Cute Things/Primarily Teen Cast/Ensemble Cast/Female Protagonist/Primarily Female Cast\nThe third season of <i>Love Live! Superstar!!</i>"
-    },
-    {
       "id": "tt33992229",
       "type": "series",
       "name": "One Piece Log: Fish-Man Island Saga",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183423-wt4YjEiCWVVD.jpg",
       "description": "Genres: Action, Adventure, Comedy, Drama, Fantasy\nTags:Pirates/Slavery/Ships/Revenge/Royal Affairs/Super Power/Shounen/Ensemble Cast/Politics/Mermaid/Drugs/Skeleton/Conspiracy/Found Family/Class Struggle/Unrequited Love/Kingdom Management/Natural Disaster\nA condensed and remastered reairing of the <i>Fish-Man Island Saga</i> (episodes 517-574) from <i>ONE PIECE</i>, with updated visuals, a new ending song, and brand-new episode previews.<br><br>\n\nThe Straw Hats reunite at Sabaody! The promised day has arrived. The Straw Hats have made it back to Sabaody Archipelago after two arduous years of separation. In the very same place where they once lost to Pacifista, the Straw Hats have proven themselves to be stronger and ready to begin their journey to the New World. With the Thousand Sunny now equipped to travel underwater, the next stop is the Fish-Man Island. “One Piece Log: Fish-Man Island Saga” is a special edited version of the original arc from “One Piece”, in an abridged 21-episode story with an enhanced contemporary visual look.<br><br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt13840232",
+      "type": "series",
+      "name": "Love Live! Superstar!! Season 3",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx155502-8Dyh2np8o5GC.jpg",
+      "description": "Genres: Music, Slice of Life\nTags:Idol/School Club/Dancing/Cute Girls Doing Cute Things/Primarily Teen Cast/Ensemble Cast/Female Protagonist/Primarily Female Cast\nThe third season of <i>Love Live! Superstar!!</i>"
     },
     {
       "id": "tt32832433",
