Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -33,7 +33,7 @@
       "type": "series",
       "name": "Blue Box",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170942-B77wUSM1jQTu.jpg",
-      "description": "Genres: Romance, Slice of Life, Sports\nTags:School Club/Heterosexual/Badminton/Athletics/Coming of Age/Male Protagonist/School/Primarily Teen Cast/Basketball/Female Protagonist/Shounen/CGI/Tomboy\n<i>Do these sports-crossed lovers have a chance?</i>\n<br><br>\nTaiki Inomata loves badminton, but he has a long way to go before he can reach nationals. When Taiki sees upperclassman Chinatsu Kano practicing her heart out on the girls’ basketball team, he falls for her hard. After an unexpected turn of events brings the two closer together, sports might not be the first thing on their minds anymore!<br><br>(Source: TMS Anime)<br><br>\n<i>Note: The series is streaming a week in advance on Netflix Japan starting with episode 2 released alongside episode 1.</i>"
+      "description": "Genres: Romance, Slice of Life, Sports\nTags:School Club/Heterosexual/Badminton/Athletics/Coming of Age/Male Protagonist/School/Primarily Teen Cast/Basketball/Female Protagonist/Shounen/Tomboy/CGI\n<i>Do these sports-crossed lovers have a chance?</i>\n<br><br>\nTaiki Inomata loves badminton, but he has a long way to go before he can reach nationals. When Taiki sees upperclassman Chinatsu Kano practicing her heart out on the girls’ basketball team, he falls for her hard. After an unexpected turn of events brings the two closer together, sports might not be the first thing on their minds anymore!<br><br>(Source: TMS Anime)<br><br>\n<i>Note: The series is streaming a week in advance on Netflix Japan starting with episode 2 released alongside episode 1.</i>"
     },
     {
       "id": "tt0434665",
@@ -152,7 +152,7 @@
       "type": "series",
       "name": "I’ll Become a Villainess Who Goes Down in History",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168139-nGLXIdSksKCI.jpg",
-      "description": "Genres: Comedy, Fantasy, Romance\nTags:Villainess/Female Protagonist/Royal Affairs/Josei/Isekai/Ojou-sama/Magic/Politics/Class Struggle/Swordplay/School\nMe, the same girl who hates all those prim and proper heroines, got reincarnated as the villain in the world of my favorite fantasy dating sim! It’s my dream come true, so I’m going to leave my mark on history by becoming the world’s greatest villain! But to do that, I’ll need to get a lot stronger, and smarter. Just one problem—the harder I try to be evil, the harder the prince falls for me! At this rate, will I ever get to earn my place in history!?\n<br><br>\n(Source: Yen Press)\n\n<i>Note: The first episode was exclusively shown as a world premiere during the Anime Messe Babelsberg 2024 on July 20th 2024 as a part of a special Anime Panel.</i>"
+      "description": "Genres: Comedy, Fantasy, Romance\nTags:Villainess/Female Protagonist/Royal Affairs/Josei/Isekai/Ojou-sama/Magic/Class Struggle/Politics/Swordplay/School\nMe, the same girl who hates all those prim and proper heroines, got reincarnated as the villain in the world of my favorite fantasy dating sim! It’s my dream come true, so I’m going to leave my mark on history by becoming the world’s greatest villain! But to do that, I’ll need to get a lot stronger, and smarter. Just one problem—the harder I try to be evil, the harder the prince falls for me! At this rate, will I ever get to earn my place in history!?\n<br><br>\n(Source: Yen Press)\n\n<i>Note: The first episode was exclusively shown as a world premiere during the Anime Messe Babelsberg 2024 on July 20th 2024 as a part of a special Anime Panel.</i>"
     },
     {
       "id": "tt31975847",
@@ -313,7 +313,7 @@
       "type": "series",
       "name": "Acro Trip",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx157965-YhogaZGde6tv.jpg",
-      "description": "Genres: Comedy, Fantasy, Mahou Shoujo\nTags:Female Protagonist/Shoujo/Slapstick/Magic/Urban/Henshin/Otaku Culture/Iyashikei/Parody/Animals/Urban Fantasy/Villainess/Yuri\nChizuko is a normal otaku girl in Niigata Prefecture. She’s obsessed with Berry Blossom, a magical heroine who protects the city. But the battles with her inept nemesis, Chroma, have become so lackluster that they’re not even worth watching. Chizuko wants to see Berry’s full power, a desire that quickly leads this seemingly timid girl down a path of evil.<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Fantasy, Mahou Shoujo\nTags:Female Protagonist/Shoujo/Slapstick/Magic/Urban/Henshin/Otaku Culture/Iyashikei/Parody/Animals/Urban Fantasy/Villainess/Yuri/LGBTQ+ Themes\nChizuko is a normal otaku girl in Niigata Prefecture. She’s obsessed with Berry Blossom, a magical heroine who protects the city. But the battles with her inept nemesis, Chroma, have become so lackluster that they’re not even worth watching. Chizuko wants to see Berry’s full power, a desire that quickly leads this seemingly timid girl down a path of evil.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt33609048",
